crates/ty_python_semantic/resources/mdtest/snapshots/invalid.md_-_Tests_for_invalid_ty…_-_Diagnostics_for_comm…_-_AST_nodes_that_are_o…_(58a3839a9bc7026d).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: invalid.md - Tests for invalid types in type expressions - Diagnostics for common errors - AST nodes that are only valid inside `Literal`
mdtest path: crates/ty_python_semantic/resources/mdtest/annotations/invalid.md
---

# Python source files

## mdtest_snippet.py

```
 1 | def bad(
 2 |     # error: [invalid-type-form]
 3 |     a: 42,
 4 |     # error: [invalid-type-form]
 5 |     b: b"42",
 6 |     # error: [invalid-type-form]
 7 |     c: True,
 8 |     # error: [invalid-syntax-in-forward-annotation]
 9 |     d: "invalid syntax",
10 | ): ...
```

# Diagnostics

```
error[invalid-type-form]: Int literals are not allowed in this context in a parameter annotation
 --> src/mdtest_snippet.py:3:8
  |
1 | def bad(
2 |     # error: [invalid-type-form]
3 |     a: 42,
  |        ^^ Did you mean `typing.Literal[42]`?
4 |     # error: [invalid-type-form]
5 |     b: b"42",
  |
info: See the following page for a reference on valid type expressions:
info: https://typing.python.org/en/latest/spec/annotations.html#type-and-annotation-expressions
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Bytes literals are not allowed in this context in a parameter annotation
 --> src/mdtest_snippet.py:5:8
  |
3 |     a: 42,
4 |     # error: [invalid-type-form]
5 |     b: b"42",
  |        ^^^^^ Did you mean `typing.Literal[b"42"]`?
6 |     # error: [invalid-type-form]
7 |     c: True,
  |
info: See the following page for a reference on valid type expressions:
info: https://typing.python.org/en/latest/spec/annotations.html#type-and-annotation-expressions
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-type-form]: Boolean literals are not allowed in this context in a parameter annotation
 --> src/mdtest_snippet.py:7:8
  |
5 |     b: b"42",
6 |     # error: [invalid-type-form]
7 |     c: True,
  |        ^^^^ Did you mean `typing.Literal[True]`?
8 |     # error: [invalid-syntax-in-forward-annotation]
9 |     d: "invalid syntax",
  |
info: See the following page for a reference on valid type expressions:
info: https://typing.python.org/en/latest/spec/annotations.html#type-and-annotation-expressions
info: rule `invalid-type-form` is enabled by default

```

```
error[invalid-syntax-in-forward-annotation]: Syntax error in forward annotation: Unexpected token at the end of an expression
  --> src/mdtest_snippet.py:9:8
   |
 7 |     c: True,
 8 |     # error: [invalid-syntax-in-forward-annotation]
 9 |     d: "invalid syntax",
   |        ^^^^^^^^^^^^^^^^ Did you mean `typing.Literal["invalid syntax"]`?
10 | ): ...
   |
info: rule `invalid-syntax-in-forward-annotation` is enabled by default

```
